<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/et_textdialog"
        android:layout_gravity="center"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        android:gravity="center"
        android:hint="@string/enter_your_car_truck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/txt3"
        android:text="@string/your_car_truck_3"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tex6"
        android:text="@string/your_car_truck_6"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tex9"
        android:text="@string/your_car_truck_9"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>