<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.driversapplication.Activitys.RegAddDataActivity">


    <LinearLayout
        android:id="@+id/layout_name"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_marginTop="36dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/et_name"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:hint="@string/hint_name" />

        <EditText
            android:id="@+id/et_srNmae"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:hint="@string/hint_srName" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/layout_phone"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:layout_below="@+id/layout_name"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/et_phone1"
            android:gravity="center"
            android:inputType="number"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:hint="@string/hint_phone1" />

        <EditText
            android:id="@+id/et_phone2"
            android:gravity="center"
            android:inputType="number"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:hint="@string/hint_phone2" />
    </LinearLayout>



    <LinearLayout
        android:id="@+id/layout_passport"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_below="@+id/layout_phone"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/et_passport"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:hint="@string/hint_passport" />

        <EditText
            android:id="@+id/et_address"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:hint="@string/hint_addres" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/layout_auto"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:layout_below="@+id/layout_passport"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/et_auto_num"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:hint="@string/hint_auto_number" />

        <EditText
            android:id="@+id/et_auto_passport"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:hint="@string/hint_auto_passport" />

    </LinearLayout>





    <LinearLayout
        android:id="@+id/laynerlayout"
        android:layout_marginTop="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_auto"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_araqum"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:background="@color/common_google_signin_btn_text_dark_disabled"
            android:text="@string/Button_shipping" />

        <Button
            android:id="@+id/btn_bernatar_araqum"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_weight="1"
            android:background="@color/common_google_signin_btn_text_dark_disabled"
            android:text="@string/shipping_trucks" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttons"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_below="@+id/laynerlayout"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_manipulyator"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:background="@color/common_google_signin_btn_text_dark_disabled"
            android:text="manipulyator" />


        <Button
            android:id="@+id/btn_evokuator"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_weight="1"
            android:background="@color/common_google_signin_btn_text_dark_disabled"
            android:text="@string/Button_evokuator" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_taxi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttons"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="11dp"
        android:background="@color/common_google_signin_btn_text_dark_disabled"
        android:text="@string/Button_taxi" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_taxi"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@color/common_google_signin_btn_text_dark_disabled"
        android:text="@string/button_allow_text" />

</RelativeLayout>
