<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">



    <TextView
        android:id="@+id/et_text"
        android:layout_gravity="center"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        android:gravity="center"
        android:hint="@string/your_car_seats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/txt4"
        android:text="@string/number_of_seats_4"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tex7"
        android:text="@string/number_of_seats_7"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>