<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.driversapplication.Fragments.HomeFragment">

    <ImageView
        android:id="@+id/image_welcome"
        android:layout_width="150dp"
        android:layout_height="80dp"
        android:src="@mipmap/welcome"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp" />

    <RatingBar
        android:id="@+id/driver_rating"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_below="@+id/image_welcome"
        android:layout_alignStart="@+id/image_welcome" />

    <TextView
        android:id="@+id/counter_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="8.5"
        android:textSize="45sp"
        android:layout_alignTop="@+id/driver_rating"
        android:layout_toEndOf="@+id/driver_rating" />


    <com.github.clans.fab.FloatingActionMenu
        android:id="@+id/fab_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:paddingBottom="12dp"
        fab:fab_colorNormal="#3c97ed"
        fab:fab_colorPressed="#3c97ed"
        fab:fab_colorRipple="#99FFFFFF"
        fab:menu_labels_colorNormal="#FFFFFF"
        fab:menu_labels_colorPressed="#444444"
        fab:menu_labels_colorRipple="#66FFFFFF"
        fab:menu_labels_ellipsize="end"
        fab:menu_labels_maxLines="-1"
        fab:menu_labels_position="right"
        fab:menu_labels_showShadow="true"
        fab:menu_labels_singleLine="true"
        fab:menu_labels_textColor="#000000"
        fab:menu_openDirection="up">

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_dialog_info"
            fab:fab_label="@string/history"
            fab:fab_size="mini" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_phone_in_talk_black_24dp"
            fab:fab_label="@string/Feedback"
            fab:fab_size="mini" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_lock_idle_charging"
            fab:fab_label="@string/start_working"
            fab:fab_size="mini" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_close"
            fab:fab_label="close working"
            fab:fab_size="mini" />
    </com.github.clans.fab.FloatingActionMenu>

    <TextView
        android:id="@+id/tv_balance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/fab_menu"
        android:layout_centerHorizontal="true"
        android:paddingBottom="20dp"
        android:text="80"
        android:textSize="40sp"/>
</RelativeLayout>
